--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "@babel/core": "^7.24.0",
     "@babel/preset-react": "^7.23.3",
     "@babel/preset-typescript": "^7.24.1",
+    "@svgr/webpack": "^8.1.0",
     "@types/axios": "^0.14.0",
     "@wordpress/scripts": "^27.4.0",
     "babel-loader": "^9.1.3",
     "css-loader": "^6.10.0",
+    "file-loader": "^6.2.0",
     "postcss-loader": "^8.1.1",
     "style-loader": "^3.3.4",
     "ts-loader": "^9.5.1",
